[tool.poetry]
name = "color-picker"
version = "0.1.0"
description = "Get Color From Image"
authors = ["Awchicks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
mplcursors = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
